# compositz

./: .gitignore  Cargo.toml  LICENSE  README.md  deno.json  flake.nix
.claude/: ACTIVE_DESIGN.md
.github/workflows/: ci.yml  desktop-artifact.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  style.rs
crates/cli/src/commands/: doctor.rs  down.rs  duplicate.rs  export.rs  hello.rs  import.rs  install.rs  ls.rs  mod.rs  ps.rs  rm.rs  up.rs
crates/core/: Cargo.toml
crates/core/src/: brand.rs  build.rs  dial_stdio.rs  endpoint.rs  engine.rs  error.rs  lib.rs  model.rs  probe.rs  storage.rs  view.rs  wslc_cli.rs
crates/core/src/recipe/: config.rs  github.rs  ingest.rs  instance.rs  loader.rs  manifest.rs  mod.rs  operations.rs  run.rs  update.rs
crates/core/tests/: config.rs  e2e_roundtrip.rs  engine_integration.rs  github.rs  ingest.rs  instance.rs  loader.rs  manifest.rs  operations.rs  run.rs  storage.rs  update.rs  wslc_cli.rs
crates/desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs  stream.rs
crates/desktop/tests/: export_bindings.rs
docs/: README.md  architecture.md  decisions.md  known-issues.md  limitations.md  recipe-format.md  recipe-ingestion.md  roadmap.md
docs/plans/: gc-disk-usage.md  slice-c-build-args.md  tauri-migration-execution.md  tauri-migration.md  wslc-cli-lifecycle.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  tauri-internals.d.ts
frontend/src/components/: ActionButton.tsx  BuildLogPanel.tsx  ContainerList.test.tsx  ContainerList.tsx  CopyId.tsx  DeleteDialog.tsx  DetailPanel.tsx  DropZone.tsx  GithubImportDialog.tsx  ImportBar.tsx  InstanceCard.tsx  InstanceList.tsx  InstanceRow.tsx  InstanceTable.tsx  LogView.tsx  RenameDialog.tsx  RuntimeLog.tsx  ServicesList.tsx  SettingsPanel.tsx  StatusPill.tsx  StreamPane.tsx  Tip.tsx  TrustDialog.tsx  UpdateDialog.tsx
frontend/src/ipc/: bindings.ts  channel.test.ts  client.ts  index.ts  mock.ts  types.ts
frontend/src/lib/: rows.ts  time.ts
frontend/src/store/: containers.test.ts  containers.ts  instances.ts
frontend/src/test/: setup.ts
frontend/src/theme/: ThemeProvider.tsx  ThemeToggle.tsx  theme-context.ts  theme.ts
recipes/cocktail/: Dockerfile  compositz.yaml
recipes/hello-web/: compositz.yaml  index.html
scripts/: gen_schema.ts  gen_schema_test.ts
spec/: compositz.schema.json
