[workspace]
members = ["crates/*"]
# The desktop crate links webkit2gtk/dbus, which are absent in this headless
# dev environment — it compiles only in CI (windows-latest). Excluding it from
# default-members keeps `cargo build`/`test`/`clippy` green locally while it
# still stays a first-class workspace member (metadata/tree resolve it).
default-members = ["crates/core", "crates/cli"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
repository = "https://github.com/hdae/compositz"
license = "MIT"

[workspace.dependencies]
# Docker client. 0.21 is the latest published 0.x; its default features
# ("http", "pipe") already cover TCP + unix socket + Windows named pipe, and the
# rustls TLS provider is opt-in via "ssl" (rustls/ring) — no openssl anywhere.
bollard = { version = "0.21", default-features = false, features = ["http", "pipe", "ssl"] }
thiserror = "2"
anyhow = "1"
# `time` powers the desktop snapshot pump's warming/safety refresh timers
# (`tokio::time::sleep` + the `select!` timeout arm). bollard enables it transitively,
# but declare it here so the timer is load-bearing, not incidental.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML for recipe manifests. serde_norway is the RustSec-recommended, drop-in
# successor to the unmaintained serde_yaml (serde_yml is banned: RUSTSEC-2025-0068).
serde_norway = "0.9"
# JSON Schema generation from the manifest types — replaces the Deno
# scripts/gen_schema.ts (zod → JSON Schema) path.
schemars = "1"
# Charset validation for manifest fields (recipe id, names, image tags, …),
# porting the Zod regexes 1:1. Compiled once via LazyLock at the parse boundary.
regex = "1"
# Atomic instance-store writes (temp file in the same dir → fsync → rename),
# structurally resolving the Deno tree's non-atomic config.yaml write.
tempfile = "3"
# Recipe-bundle ingestion (Phase 1e): stream-extract a tar / tar.gz archive to
# disk entry-by-entry. tar-rs is SYNC (extraction runs under spawn_blocking at the
# async edges) — async-tar / tokio-tar are intentionally NOT used. flate2's
# MultiGzDecoder gunzips (multi-member safe). The recipe archive format is
# tar/tar.gz ONLY — the Deno source has no zip path, so neither does this port.
tar = "0.4"
flate2 = "1"
# OS CSPRNG for the instance-id random suffix (parity with crypto.getRandomValues).
getrandom = "0.2"
# ISO-8601 timestamps for instance provenance (meta.json `createdAt` default).
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# GitHub codeload download (Phase 1e-2): ONE blocking Agent, rustls over RING
# (reuses bollard's provider — no second crypto backend, no aws-lc-rs C build, no
# openssl), redirect-follow, per-read timeout. Chosen over reqwest because reqwest
# 0.13's rustls path pulls aws-lc-rs; ureq keeps the whole tree on ring. `tls` =
# rustls+ring+webpki-roots; gzip is intentionally NOT enabled — the tar.gz payload
# is gunzipped by ingest, not by HTTP content-encoding.
ureq = { version = "2", default-features = false, features = ["tls"] }
# The container tar-download surface yields `bytes::Bytes` chunks (bollard uses
# `bytes` internally but does not re-export it, so name it directly).
bytes = "1"
# Async generators for the engine build/download streams: bollard's `build_image`
# / `download_from_container` return `impl Stream + '_` (borrowing `&self`), so a
# `'static` stream must OWN a cloned `Docker` in its body — an `async_stream`
# generator does exactly that with zero runtime coupling (vs a spawn+channel).
async-stream = "0.3"
# Rust type → TypeScript reflection for the desktop IPC contract (Phase 3), wired
# to `tauri-specta` in the desktop crate. Core needs only the `Type` derive + serde
# attribute compat, so it stays an OPTIONAL dep behind core's `specta` feature (the
# CLI never compiles it). PINNED EXACT to rc.22 — the version `tauri-specta`
# =2.0.0-rc.21 requires (rc.23+ overhauled the feature flags: `serde`/`derive`
# were dropped, and rc.23+ also raise the MSRV past our toolchain). An exact pin
# makes core + desktop unify on rc.22 on ANY toolchain (CI's newer rustc would
# otherwise let a flexible req jump to rc.25 and conflict with tauri-specta).
# `derive` = the `specta::Type` macro; `serde` = honor `#[serde(rename_all/rename)]`.
specta = { version = "=2.0.0-rc.22", default-features = false, features = ["derive", "serde"] }

[profile.release]
strip = true
