[package]
name = "compositz-core"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "compositz_core"
path = "src/lib.rs"

[dependencies]
bollard.workspace = true
thiserror.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_norway.workspace = true
serde_json.workspace = true
schemars.workspace = true
regex.workspace = true
tempfile.workspace = true
tar.workspace = true
flate2.workspace = true
getrandom.workspace = true
chrono.workspace = true
ureq.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures-util.workspace = true
tempfile.workspace = true
# The ingest tests craft tar / tar.gz fixtures (incl. malicious ustar entries).
flate2.workspace = true
