[package]
name = "compositz-core"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "compositz_core"
path = "src/lib.rs"

[features]
# Derive `specta::Type` on the view-model + manifest types so the desktop crate
# can generate their TypeScript via `tauri-specta`. Off by default: the CLI links
# core without it, so `specta` is never compiled for `cargo build`/`test` locally.
specta = ["dep:specta"]

[dependencies]
bollard.workspace = true
thiserror.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_norway.workspace = true
serde_json.workspace = true
schemars.workspace = true
regex.workspace = true
tempfile.workspace = true
tar.workspace = true
flate2.workspace = true
getrandom.workspace = true
chrono.workspace = true
ureq.workspace = true
bytes.workspace = true
async-stream.workspace = true
# dial-stdio transport (`dial_stdio.rs`): a hyper connector that spawns a bridge
# process per pooled connection — see the workspace manifest for why these are
# direct deps.
hyper.workspace = true
hyper-util.workspace = true
tower-service.workspace = true
specta = { workspace = true, optional = true }
# `spawn_blocking` for the readiness probe (`probe.rs`): the blocking ureq HTTP
# probe runs off the async runtime while `build_snapshot` orchestrates it. `rt` is
# the only runtime piece core needs; multi-thread + macros come from the shared
# workspace features (harmless — the CLI/desktop pull them anyway).
tokio.workspace = true

[dev-dependencies]
futures-util.workspace = true
tempfile.workspace = true
# The ingest tests craft tar / tar.gz fixtures (incl. malicious ustar entries).
flate2.workspace = true
