[package]
name = "compositz-desktop"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Compositz desktop app (Tauri 2)"

[lib]
# Tauri's mobile/desktop entry convention: the app logic lives in a lib so the
# same `run()` can be driven from `main.rs` (desktop) and a generated mobile
# entry point. `_lib` avoids clashing with the `compositz-desktop` bin name.
name = "compositz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# Distinct from the cli crate's `compositz` binary: both land in the shared
# workspace `target/`, so a Phase 2 CI job that builds cli + desktop together
# would otherwise clobber one artifact with the other.
name = "compositz-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
compositz-core = { path = "../core", features = ["specta"] }
# `specta`: `tauri::ipc::Channel<T>` impls `specta::Type` only under this feature,
# which the streaming commands' Channel args require. tauri-specta already enables
# it transitively, but declare it here so the dependency is load-bearing, not
# incidental to tauri-specta's own dep spec.
tauri = { version = "2", features = ["specta"] }
tauri-plugin-opener = "2"
# single-instance MUST be registered first (its guard runs before the rest of setup);
# dialog = frontend file open/save pickers; log = structured logging; window-state =
# persist window geometry across launches.
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
# URL parse for the `open_service_url` localhost allowlist (a security check — a
# hand-rolled parse would be the wrong place to cut corners). Already in the tree
# via tauri, so it adds nothing to the closure.
url = "2"
# Rust type + command → TypeScript binding generation. tauri-specta rc.21 is the
# newest rc pinned to specta rc.22 (rc.22+ of tauri-specta pull specta rc.24/rc.25,
# which drop the `serde`/`derive` features core relies on and raise the MSRV past
# our toolchain). Exact pins so the CI (newer rustc) resolves the SAME graph the
# lockfile fixes here. specta itself comes from the workspace (shared with core).
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta.workspace = true

[dev-dependencies]
# TypeScript emitter, used only by the `export_bindings` test that regenerates
# frontend/src/ipc/bindings.ts. tauri-specta already pulls it in transitively
# (its `typescript` feature), so this only makes the direct use explicit.
specta-typescript = "=0.0.9"
